# clickup-mcp-server

./: AGENTS.md  AUDIT.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  smithery.yaml  tsconfig.json
clickup_mcp/: config.py  logger.py  server.py
clickup_mcp/services/: __init__.py  base.py  folder.py  member.py  shared.py  task.py  workspace.py
docs/: HANDBOOK.md  OPERATIONS.md  RELEASE_NOTES.md  SMITHERY_ROOT_CAUSE.md
eval/: README.md  evaluation.sample.xml
examples/: README.md
examples/basic/: stdio.ts  streamableHttp.ts
scripts/: dev-http.ts  dev-stdio.ts  generate-ssl-cert.sh  start.sh  verify-http.ts  verify-inspector-http.ts  verify-smithery.ts
src/: config.ts  index.ts  server.ts  sse_server.ts
src/clickup_mcp/: __init__.py  server.py
tests/: annotations.meta.test.ts  bulkProcessor.test.ts  catalogue.test.ts  clickupGateway.test.ts  diagnostics.manager.test.ts  diagnostics.redaction.test.ts  docCrud.test.ts  docSearch.test.ts  docsearch.contentFormat.test.ts  dryrun.exposure.test.ts  dryrun.test.ts  health.test.ts  hierarchy.test.ts  httpBridge.headers.test.ts  httpBridge.notifications.test.ts  httpBridge.routing.test.ts  httpBridge.transport.test.ts  httpClient.test.ts  limits.enforcement.test.ts  logging.test.ts  members.test.ts  resolve.test.ts  runtimeConfig.test.ts  safety.confirmation.test.ts  safety.middleware.test.ts  settings.service.test.ts  setup.ts  smithery.config.test.ts  taskCrud.test.ts  taskFuzzySearch.test.ts  time.test.ts  timeReports.test.ts  toolGate.test.ts  updateTask.test.ts
types/: yazl.d.ts
(+106 files in other folders)
